re PR target/19350 (Compilation with -O1 -ftree-vectorize gives unrecognizable insn on x86.)

PR target/19350
        * config/i386/i386.c (ix86_expand_vector_move_misalign): Convert
        to V4SFmode in SSE1 fallback load path.

From-SVN: r93957